# easynav_playground_drone

./: CMakeLists.txt  README.md  package.xml  thirdparty.repos
config/: drone_bridge.yaml  px4_config.yaml  px4_pluginlists.yaml
launch/: playground_drone.launch.py  px4.launch
