<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easynav_playground_drone</name>
  <version>0.0.0</version>
  <description>Easy Navigation: Drone Playground.</description>
  <maintainer email="juanscelyg@gmail.com">Juan S. Cely G.</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mavros</depend>
  <depend>mavros_extras</depend>
  <depend>mavros_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>